--- a/Styles/global.css
+++ b/Styles/global.css
@@ -1,10 +1,8 @@
 body {
-    direction: rtl;
-    font-family: "Vazirmatn", serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-    margin: 0;
-    background-color: #4A628A;
-  }
-
-  
+  direction: rtl;
+  font-family: "Vazirmatn", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  margin: 0;
+  padding: 0;
+}
